# poc-rag-benchmark

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SETUP.md  plan.md  pyproject.toml
.reports/: codemap-diff.txt
api/: config.py  main.py  requirements.txt  store.py
api/auth/: dependencies.py  jwt_handler.py  models.py
api/rag/: models.py  pipeline.py  retrieval.py
api/routes/: auth_routes.py  chat.py  documents.py  feedback.py
api/routes/webhooks/: line.py
benchmarks/embedding-model/: README.md  base.py  config.py  emb_registry.py  evaluate.py  requirements.txt
benchmarks/embedding-model/bge_m3/: README.md
benchmarks/embedding-model/cohere/: README.md
benchmarks/embedding-model/models/: bge_m3.py  cohere_v3.py  multilingual_e5.py  mxbai.py  openai_large.py  openai_small.py  wangchanberta.py
benchmarks/embedding-model/multilingual_e5/: README.md
benchmarks/embedding-model/mxbai/: README.md
benchmarks/embedding-model/openai/: README.md
benchmarks/embedding-model/results/: embedding_model_1775101437.json  embedding_model_results.json
benchmarks/embedding-model/wangchanberta/: README.md
benchmarks/llm-provider/: README.md  __init__.py  base.py  config.py  evaluate.py  llm_registry.py  requirements.txt
benchmarks/llm-provider/anthropic/: README.md
benchmarks/llm-provider/ollama/: README.md
benchmarks/rag-framework/: README.md  base.py  config.py  evaluate.py  fw_registry.py  requirements.txt
benchmarks/vector-db/: BENCHMARK_DEEP_DIVE.md  README.md  requirements.txt  run_benchmark.py
datasets/: faq_mixed.md  hr_policy_th.md  questions.json  tech_docs_en.md
docker/: docker-compose.vector-db.yml
docs/: BENCHMARK_SUMMARY.md  HOW_TO_READ_BENCHMARKS.md  README.md  glossary.md
docs/CODEMAPS/: INDEX.md  architecture.md  backend.md  benchmarks.md  data.md  dependencies.md  tui.md
docs/adr/: ADR-001-vector-db.md  ADR-002-rag-framework.md  ADR-003-embedding-model.md  ADR-004-llm-provider.md  ADR-005-auth.md  ADR-006-anti-lock-in.md
docs/guides/: adding-adapters.md  api-usage.md  benchmarking.md  quickstart.md
docs/phases/: phase-1-vector-db.md  phase-2-rag-framework.md  phase-3-embedding.md  phase-3.5-llm-provider.md  phase-4-api-auth.md  phase-5-integration.md  phase-6-rfc.md
docs/presentation/: outline.md
docs/rfc/: RFC-001-rag-tech-stack.md
tests/: requirements.txt
tests/integration/: conftest.py  test_scenarios.py
tests/load/: locustfile.py
tui/: __init__.py  __main__.py  app.py  client.py  config.py
tui/screens/: __init__.py  benchmarks.py  chat.py  dashboard.py  documents.py  results.py  settings.py  tests.py
tui/styles/: app.tcss
tui/widgets/: __init__.py  benchmark_progress.py  chat_message.py  chunk_viewer.py  login_dialog.py  result_table.py  status_bar.py
(+29 files in other folders)
