[project]
name = "spike-rak"
version = "0.1.0"
description = "RAG Tech Stack Spike — Vector DB / Framework / Embedding / API / Integration Testing"
requires-python = ">=3.11"
dependencies = []

# ─── Dependency Groups (install per phase with: uv sync --group <name>) ────────
#
# Phase 1:   uv sync --group bench-vectordb
# Phase 2:   uv sync --group bench-rag        ← heavy: torch + 3 frameworks
# Phase 3:   uv sync --group bench-embed      ← needs torch
# Phase 3.5: uv sync --group bench-llm
# Phase 4:   uv sync --group api
# Phase 5:   uv sync --group test             ← includes api automatically
# All:       uv sync --all-groups             ← installs everything

[dependency-groups]

# ── Phase 1: Vector DB Benchmarks ─────────────────────────────────────────────
bench-vectordb = [
    "qdrant-client>=1.9.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.2.5",
    "pymilvus>=2.4.0",
    "opensearch-py>=2.5.0",
    "numpy>=1.26.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

# ── Phase 2: RAG Framework Benchmarks (heavy ~2GB: torch + 3 frameworks) ──────
bench-rag = [
    "openai>=1.30.0",
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "llama-index-core>=0.11.0",
    "llama-index-llms-openai>=0.3.0",
    "llama-index-embeddings-huggingface>=0.3.0",
    "llama-index-embeddings-openai>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-huggingface>=0.1.0",
    "faiss-cpu>=1.8.0",
    "haystack-ai>=2.5.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "tqdm>=4.66.0",
]

# ── Phase 3: Embedding Model Benchmarks ───────────────────────────────────────
bench-embed = [
    "sentence-transformers>=3.0.0",
    "torch>=2.0.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "rich>=13.7.0",
    "transformers>=4.40.0",
    "cohere>=5.0",
    "sentencepiece>=0.2.0",
]

# ── Phase 3.5: LLM Provider Benchmarks ────────────────────────────────────────
bench-llm = [
    "openai>=1.30.0",
    "anthropic>=0.28.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

# ── Phase 4: API Server (FastAPI + JWT + RBAC) ─────────────────────────────────
api = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.11.3",
    "pydantic-settings==2.8.1",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "bcrypt==4.0.1",
    "openai==1.71.0",
    "httpx==0.28.1",
    "python-multipart==0.0.20",
]

# ── Phase 5: Integration Tests + Load Tests (includes api group) ───────────────
test = [
    { include-group = "api" },
    "pytest==8.3.5",
    "pytest-asyncio==0.25.3",
    "locust==2.32.4",
]
